flow and rule and trafficSource update

--- a/Front/src/index.html
+++ b/Front/src/index.html
@@ -77,6 +77,9 @@
     <script src="js/controllers/trackCampaign.js"></script>
     <script src="js/controllers/offer.js"></script>
     <script src="js/controllers/lander.js"></script>
+    <script src="js/controllers/flow.js"></script>
+    <script src="js/controllers/trafficSource.js"></script>
+    <script src="js/controllers/rule.js"></script>
     <!-- endbuild -->
 
   </body>
