--- a/Front/src/tpl/app.html
+++ b/Front/src/tpl/app.html
@@ -57,6 +57,24 @@
                     <span>{{'lander' | translate}}</span>
                 </a>
             </li>
+            <li ui-sref-active="active">
+                <a ui-sref="app.flow" md-ink-ripple>
+                    <md-icon class="material-icons md-dark md-18 nav-icon">view_list</md-icon>
+                    <span>{{'flow' | translate}}</span>
+                </a>
+            </li>
+            <li ui-sref-active="active">
+                <a ui-sref="app.trafficSource" md-ink-ripple>
+                    <md-icon class="material-icons md-dark md-18 nav-icon">view_list</md-icon>
+                    <span>{{'trafficSource' | translate}}</span>
+                </a>
+            </li>
+            <li ui-sref-active="active">
+                <a ui-sref="app.rule" md-ink-ripple>
+                    <md-icon class="material-icons md-dark md-18 nav-icon">view_list</md-icon>
+                    <span>{{'rule' | translate}}</span>
+                </a>
+            </li>
         </ul>
     </nav>
 </md-sidenav>
