modify offer network to affiliate network

--- a/Front/src/tpl/app.html
+++ b/Front/src/tpl/app.html
@@ -34,9 +34,9 @@
     <nav ui-nav class="navi clearfix">
         <ul class="nav">
             <li ui-sref-active="active">
-                <a ui-sref="app.offernetwork" md-ink-ripple>
+                <a ui-sref="app.affiliatenetwork" md-ink-ripple>
                     <md-icon class="material-icons md-dark md-18 nav-icon">view_list</md-icon>
-                    <span>{{'offerNetwork' | translate}}</span>
+                    <span>{{'affiliateNetwork' | translate}}</span>
                 </a>
             </li>
             <li ui-sref-active="active">
