--- a/Front/src/tpl/trafficSource-edit-dialog.html
+++ b/Front/src/tpl/trafficSource-edit-dialog.html
@@ -37,6 +37,77 @@
                     <input type="text" class="form-control" ng-model="item.budget" required>
                 </div>
             </div>
+
+            <div class="form-group collapsible-tab visible">
+                <div class="collapsible-header">
+                    <div class="line"></div>
+                    <div class="label-con">
+                        <i class="material-icons">settings</i>
+                        <label>Advanced</label>
+                        <i class="material-icons arrow-down">keyboard_arrow_down</i>
+                    </div>
+                </div>
+            </div>
+
+            <div class="form-group collapse-wrapper">
+                <i class="note">Please note that unchecking <b>"Track"</b> will not affect Conversion report results.</i>
+                <table>
+                    <thead>
+                        <tr>
+                            <th></th>
+                            <th>Parameter</th>
+                            <th>Placeholder</th>
+                            <th>Name</th>
+                            <th>Track</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td class="col-sm-3 control-label">External ID：</td>
+                            <td class="traficc-source-input"><input type="text"></td>
+                            <td class="traficc-source-input"><input type="text"></td>
+                            <td class="traficc-source-input"><input type="text" disabled></td>
+                            <td class="traficc-source-input"></td>
+                        </tr>
+                        <tr>
+                            <td class="col-sm-3 control-label">Cost：</td>
+                            <td class="traficc-source-input"><input type="text"></td>
+                            <td class="traficc-source-input"><input type="text"></td>
+                            <td class="traficc-source-input"><input type="text" disabled=></td>
+                            <td class="traficc-source-input"></td>
+                        </tr>
+                        <tr>
+                            <td class="col-sm-3 control-label">Custom variable1：</td>
+                            <td class="traficc-source-input"><input type="text"></td>
+                            <td class="traficc-source-input"><input type="text"></td>
+                            <td class="traficc-source-input"><input type="text"></td>
+                            <td class="traficc-source-input"><input type="checkbox"></td>
+                        </tr>
+                        <tr>
+                            <td class="col-sm-3 control-label">Custom variable2：</td>
+                            <td class="traficc-source-input"><input type="text"></td>
+                            <td class="traficc-source-input"><input type="text"></td>
+                            <td class="traficc-source-input"><input type="text"></td>
+                            <td class="traficc-source-input"><input type="checkbox"></td>
+                        </tr>
+                        <tr>
+                            <td class="col-sm-3 control-label">Custom variable3：</td>
+                            <td class="traficc-source-input"><input type="text"></td>
+                            <td class="traficc-source-input"><input type="text"></td>
+                            <td class="traficc-source-input"><input type="text"></td>
+                            <td class="traficc-source-input"><input type="checkbox"></td>
+                        </tr>
+                        <tr>
+                            <td class="col-sm-3 control-label">Custom variable4：</td>
+                            <td class="traficc-source-input"><input type="text"></td>
+                            <td class="traficc-source-input"><input type="text"></td>
+                            <td class="traficc-source-input"><input type="text"></td>
+                            <td class="traficc-source-input"><input type="checkbox"></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+
         </form>
 
     </md-dialog-content>
