--- a/Front/src/tpl/affiliateNetwork-edit-dialog.html
+++ b/Front/src/tpl/affiliateNetwork-edit-dialog.html
@@ -17,7 +17,7 @@
             <div class="form-group">
                 <label class="col-sm-3 control-label">{{'affiliateNetworkPostBackUrl' | translate}}: </label>
                 <div class="col-sm-4">
-                    <input type="text" class="form-control" ng-model="item.url" required>
+                    <input type="text" class="form-control" ng-model="item.postbackUrl" required>
                 </div>
             </div>
             <div class="url-tokens-row form-group">
