trackCampaign Interaction update

--- a/Front/src/index.html
+++ b/Front/src/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="../bower_components/angular-material/angular-material.css"/>
     <link rel="stylesheet" href="../bower_components/angular-material-data-table/dist/md-data-table.css"/>
     <link rel="stylesheet" href="../bower_components/angular-toastr/dist/angular-toastr.css"/>
+    <link rel="stylesheet" href="../bower_components/zTree/css/zTreeStyle/zTreeStyle.css"/>
     <link rel="stylesheet" href="assets/css/bootstrap.css"/>
     <link rel="stylesheet" href="assets/css/material-icons.css"/>
     <link rel="stylesheet" href="assets/css/app.css"/>
@@ -36,6 +37,7 @@
 
     <!-- build:js assets/js/app.min.js -->
     <script src="../bower_components/jquery/dist/jquery.js"></script>
+    <script src="../bower_components/zTree/js/jquery.ztree.core.js"></script>
     <script src="../bower_components/moment/min/moment.min.js"></script>
     <script src="../bower_components/Chart.js/dist/Chart.min.js"></script>
     <!-- Angular libs -->
