--- a/Front/src/index.html
+++ b/Front/src/index.html
@@ -78,7 +78,7 @@
 <script src="js/controllers/signup.js"></script>
 <script src="js/controllers/report.js"></script>
 <script src="js/controllers/affiliateNetwork.js"></script>
-<script src="js/controllers/trackCampaign.js"></script>
+<script src="js/controllers/campaign.js"></script>
 <script src="js/controllers/offer.js"></script>
 <script src="js/controllers/lander.js"></script>
 <script src="js/controllers/flow.js"></script>
