--- a/Front/src/tpl/lander-edit-dialog.html
+++ b/Front/src/tpl/lander-edit-dialog.html
@@ -25,36 +25,10 @@
                 <div class="col-sm-5">
                     <i>Available URL tokens:</i>
                     <div class="url-tokens">
-                        <div class="url-token " data-token-value="{campaign.id}">
+                        <div class="url-token" ng-repeat="url in urlItem" ng-click="urlTokenClick(url)">
                             <span class="url-token-icon">+</span>
-                            <span class="url-token-caption">{campaign.id}</span>
+                            <span class="url-token-caption">{{url}}</span>
                         </div>
-
-                        <div class="url-token " data-token-value="{trafficsource.id}">
-                            <span class="url-token-icon">+</span>
-                            <span class="url-token-caption">{trafficsource.id}</span>
-                        </div>
-
-                        <div class="url-token " data-token-value="{trafficsource.name}">
-                            <span class="url-token-icon">+</span>
-                            <span class="url-token-caption">{trafficsource.name}</span>
-                        </div>
-
-                        <div class="url-token " data-token-value="{lander.id}">
-                            <span class="url-token-icon">+</span>
-                            <span class="url-token-caption">{lander.id}</span>
-                        </div>
-
-                        <div class="url-token " data-token-value="{device}">
-                            <span class="url-token-icon">+</span>
-                            <span class="url-token-caption">{device}</span>
-                        </div>
-
-                        <div class="url-token " data-token-value="{brand}">
-                            <span class="url-token-icon">+</span>
-                            <span class="url-token-caption">{brand}</span>
-                        </div>
-
                     </div>
                 </div>
             </div>
@@ -72,6 +46,21 @@
                         <md-option value="2">Canada</md-option>
                         <md-option value="3">China</md-option>
                     </md-select>
+                </div>
+            </div>
+            <div class="form-group tag-items">
+                <label class="col-sm-3 control-label">Tags：</label>
+                <div class="col-sm-5 selectize-input form-group">
+                    <md-chips
+                            ng-model="item.tags"
+                            readonly="ctrl.readonly"
+                            md-removable="ctrl.removable"
+                            placeholder="Enter a tag"
+                            delete-button-label="Remove Tag"
+                            delete-hint="Press delete to remove tag"
+                            secondary-placeholder="+Tag"
+                            md-max-chips="10">
+                    </md-chips>
                 </div>
             </div>
         </form>
