--- a/Front/src/tpl/app.html
+++ b/Front/src/tpl/app.html
@@ -28,8 +28,7 @@
 
 <!-- <md-sidenav md-is-locked-open="screenGtSmall" md-component-id="left"
             class="md-sidenav-left md-whiteframe-z2 cs-left-aside"> -->
-<md-sidenav md-is-locked-open="screenGtSmall"
-            class="md-sidenav-left md-whiteframe-z2 cs-left-aside">
+<md-sidenav class="md-sidenav-left md-whiteframe-z2 cs-left-aside">
     <nav ui-nav class="navi clearfix">
         <ul class="nav">
             <li ui-sref-active="active">
