--- a/Front/src/tpl/report.html
+++ b/Front/src/tpl/report.html
@@ -1,149 +1,188 @@
 <div class="cs-page-subheader">
-    <div class="cs-page-crumb">
-        <span>{{app.subtitle | translate}}</span>
-    </div>
+  <div class="cs-page-crumb">
+    <span>{{app.subtitle | translate}}</span>
+  </div>
 </div>
-
-<div flex layout="column" class="cs-page-content">
-
-    <div class="cs-action-bar" layout="row">
-        <md-button class="md-raised md-primary cs-compact cs-add-button" ng-click="editItem($event)">{{'add' |
-            translate}}
-        </md-button>
-        <div class="cs-action-group" flex layout="row">
-            <div class="cs-subform-control">
-                <input type="text" class="cs-filter-input" ng-model="query.filter" placeholder="Search...">
-            </div>
-            <div class="cs-subform-control">
-                <md-select class="cs-subform-select" ng-model="reportGroupby1" required>
-                    <md-option value="country">country</md-option>
-                    <md-option value="os">os</md-option>
-                    <md-option value="offer">offer</md-option>
-                </md-select>
-            </div>
-            <div class="cs-subform-control">
-                <md-select class="cs-subform-select" ng-model="reportGroupby2">
-                    <md-option value="country">country</md-option>
-                    <md-option value="os">os</md-option>
-                    <md-option value="offer">offer</md-option>
-                </md-select>
-            </div>
-            <div class="cs-subform-control">
-                <md-select class="cs-subform-select" ng-model="reportGroupby3">
-                    <md-option value="country">country</md-option>
-                    <md-option value="os">os</md-option>
-                    <md-option value="offer">offer</md-option>
-                </md-select>
-            </div>
-            <div class="cs-subform-control">
-                <md-select class="cs-subform-select" ng-model="datetype">
-                    <md-option value="1">Yesterday</md-option>
-                    <md-option value="2">Last 7 days</md-option>
-                    <md-option value="3">Last 14 days</md-option>
-                    <md-option value="4">This Week</md-option>
-                    <md-option value="5">Last Week</md-option>
-                    <md-option value="6">This Month</md-option>
-                    <md-option value="7">Last Month</md-option>
-                    <md-option value="0">Custom</md-option>
-                </md-select>
-            </div>
-            <div class="cs-subform-group" ng-show="datetype==0">
-                <label class="cs-subform-label">{{'startDate' | translate}}：</label>
-                <div class="cs-subform-control">
-                    <button class="cs-button-datepicker" uib-datepicker-popup="yyyy-MM-dd" ng-model="query.from"
-                            ng-max="query.to" is-open="ctrl.dpOpened.a" datepicker-options="dateOptions"
-                            ng-required="true" close-text="Close" ng-click="ctrl.dpOpened.a=true" type="button">
-                        {{query.from | date: 'yyyy-MM-dd'}}<i class="glyphicon glyphicon-calendar"></i>
-                    </button>
-                </div>
-                <label class="cs-subform-label">{{'endDate' | translate}}：</label>
-                <div class="cs-subform-control">
-                    <button class="cs-button-datepicker" uib-datepicker-popup="yyyy-MM-dd" ng-model="query.to"
-                            ng-min="query.from" is-open="ctrl.dpOpened.b" datepicker-options="dateOptions"
-                            ng-required="true" close-text="Close" ng-click="ctrl.dpOpened.b=true" type="button">
-                        {{query.to | date: 'yyyy-MM-dd'}}<i class="glyphicon glyphicon-calendar"></i>
-                    </button>
-                </div>
-            </div>
-            <div class="cs-subform-search">
-                <a>
-                    <md-icon class="material-icons md-24" ng-click="search()">search</md-icon>
-                </a>
-            </div>
-        </div>
-        <div class="selectAll">
-            <md-select class="cs-subform-select" ng-model="query.status" required>
-                <md-option value="0">Archived</md-option>
-                <md-option value="1">Active</md-option>
-                <md-option value="2">All</md-option>
-            </md-select>
-        </div>
-        <div class="view_column" ng-click="viewColumnClick()">
-            <i class="material-icons view-column-icon">view_column</i>
-            <i class="material-icons arrow-down-icon">keyboard_arrow_down</i>
-        </div>
-        <div class="view_column_con" ng-show="viewColumnIsShow">
-            <ul class="view_column_list">
-                <li ng-repeat="item in columns"><input type="checkbox" ng-model="reportViewColumns[item.key].visible" ng-checked="preferences.reportViewColumns[item.key].visible">{{item.name}}
-                </li>
-            </ul>
-            <i class="material-icons btn-icon">done</i>
-            <md-button class="md-raised md-primary cs-compact cs-add-button" ng-click="applyChange()">{{'apply changes' | translate}}
-            </md-button>
-            <i class="material-icons btn-icon">close</i>
-            <md-button class="md-raised md-primary cs-compact cs-add-button close-btn" ng-click="viewCloumnClose()">{{'close' | translate}}
-            </md-button>
-        </div>
-
+<div flex layout="column" class="cs-page-content report">
+  <div class="cs-action-bar clearfix">
+    <div class="left-con">
+      <div class="cs-subform-control">
+        <md-select class="cs-subform-select" ng-model="reportGroupby1" required>
+        <md-option value="country" selected>country</md-option>
+        <md-option value="os">os</md-option>
+        <md-option value="offer">offer</md-option>
+        </md-select>
+      </div>
+      <div class="cs-subform-control">
+        <md-select class="cs-subform-select" ng-model="reportGroupby2">
+        <md-option value="country">country</md-option>
+        <md-option value="os" selected>os</md-option>
+        <md-option value="offer">offer</md-option>
+        </md-select>
+      </div>
+      <div class="cs-subform-control">
+        <md-select class="cs-subform-select" ng-model="reportGroupby3">
+        <md-option value="country">country</md-option>
+        <md-option value="os">os</md-option>
+        <md-option value="offer" selected>offer</md-option>
+        </md-select>
+      </div>
     </div>
-
-    <md-table-container>
-        <table md-table multiple ng-model="selected" md-progress="promise">
-            <thead md-head md-order="reportSort">
-            <tr md-row>
-                <th md-column md-order-by="{{item.key}}" ng-repeat="item in columns"
-                    ng-show="preferences.reportViewColumns[item.key].visible">{{item.name}}
-                </th>
-                <th md-column class="cs-cell-action">{{'operation' | translate}}</th>
-            </tr>
-            </thead>
-            <tbody md-body>
-            <tr md-row ng-repeat="item in report.rows" ng-init="fab[$index] = {isOpen: false, tooltipVisible:false}">
-                <td md-cell ng-repeat="column in columns" ng-show="preferences.reportViewColumns[column.key].visible" ng-click="lineClick(reportGroupby1, columns[1].key, item[columns[1].key], 1)">{{item[column.key]}}</td>
-                <td md-cell class="cs-cell-action">
-                    <md-fab-speed-dial md-direction="left" md-open="fab[$index].isOpen"
-                                       class="md-scale md-mini cs-fab-action"
-                                       ng-mouseenter="toggleFab($index, true)" ng-mouseleave="toggleFab($index, false)">
-                        <md-fab-trigger>
-                            <md-button aria-label="operation" class="md-primary md-icon-button md-mini">
-                                <md-icon aria-label="menu">menu</md-icon>
-                            </md-button>
-                        </md-fab-trigger>
-                        <md-fab-actions>
-                            <md-button aria-label="Edit" class="md-fab md-raised md-mini"
-                                       ng-click="editItem($event, item)">
-                                <md-icon aria-label="Edit">edit</md-icon>
-                            </md-button>
-                            <md-button aria-label="Delete" class="md-fab md-raised md-mini"
-                                       ng-click="deleteItem($event, item)">
-                                <md-icon aria-label="Delete">delete</md-icon>
-                            </md-button>
-                        </md-fab-actions>
-                    </md-fab-speed-dial>
-                </td>
-            </tr>
-            </tbody>
-            <tbody md-body ng-if="report.totalRows != 0">
-            <tr md-row>
-                <td md-cell ng-show="preferences.reportViewColumns[columns[0].key].visible">Total</td>
-                <td md-cell ng-repeat="column in columns" ng-show="preferences.reportViewColumns[column.key].visible && !$first">{{report.totals[column.key]}}</td>
-                <td md-cell></td>
-            </tr>
-            </tbody>
-        </table>
-    </md-table-container>
-
-    <md-table-pagination md-limit="query.limit" md-limit-options="[50, 100, 200, 500, 1000]" md-page="query.offset"
-                         md-total="{{report.totalRows}}" md-on-paginate="getList" md-page-select></md-table-pagination>
-
+    <div class="right-select">
+      <div class="cs-subform-control search-con">
+        <input type="text" class="cs-filter-input" ng-model="query.filter" placeholder="Search...">
+        <md-icon class="material-icons md-24" ng-click="search()">search</md-icon>
+      </div>
+      <div class="cs-subform-control">
+        <md-select class="cs-subform-select" ng-model="datetype">
+        <md-option value="1">Yesterday</md-option>
+        <md-option value="2">Last 7 days</md-option>
+        <md-option value="3">Last 14 days</md-option>
+        <md-option value="4">This Week</md-option>
+        <md-option value="5">Last Week</md-option>
+        <md-option value="6">This Month</md-option>
+        <md-option value="7">Last Month</md-option>
+        <md-option value="0">Custom</md-option>
+        </md-select>
+      </div>
+      <div class="cs-subform-group" ng-show="datetype==0">
+        <label class="cs-subform-label">{{'startDate' | translate}}：</label>
+        <div class="cs-subform-control">
+          <button class="cs-button-datepicker" uib-datepicker-popup="yyyy-MM-dd" ng-model="query.from"
+          ng-max="query.to" is-open="ctrl.dpOpened.a" datepicker-options="dateOptions"
+          ng-required="true" close-text="Close" ng-click="ctrl.dpOpened.a=true" type="button">
+          {{query.from | date: 'yyyy-MM-dd'}}<i class="glyphicon glyphicon-calendar"></i>
+          </button>
+        </div>
+        <label class="cs-subform-label">{{'endDate' | translate}}：</label>
+        <div class="cs-subform-control">
+          <button class="cs-button-datepicker" uib-datepicker-popup="yyyy-MM-dd" ng-model="query.to"
+          ng-min="query.from" is-open="ctrl.dpOpened.b" datepicker-options="dateOptions"
+          ng-required="true" close-text="Close" ng-click="ctrl.dpOpened.b=true" type="button">
+          {{query.to | date: 'yyyy-MM-dd'}}<i class="glyphicon glyphicon-calendar"></i>
+          </button>
+        </div>
+      </div>
+      <div class="selectAll">
+        <md-select class="cs-subform-select" ng-model="query.status" required>
+        <md-option value="0">Archived</md-option>
+        <md-option value="1">Active</md-option>
+        <md-option value="2">All</md-option>
+        </md-select>
+      </div>
+      <md-button class="md-raised md-primary cs-compact cs-add-button" ng-click="editItem($event)">{{'add' |
+      translate}}
+      </md-button>
+      <div class="view_column" ng-click="viewColumnClick()">
+        <i class="material-icons view-column-icon">view_column</i>
+        <i class="material-icons arrow-down-icon">keyboard_arrow_down</i>
+      </div>
+      <div class="view_column_con" ng-show="viewColumnIsShow">
+        <ul class="view_column_list">
+          <li ng-repeat="item in columns" ng-click="checkboxIsChecked(item.key)"><input type="checkbox" ng-model="reportViewColumns[item.key].visible" ng-checked="preferences.reportViewColumns[item.key].visible">{{item.name}}</li>
+        </ul>
+        <i class="material-icons btn-icon"  ng-click="applyChange()">done</i>
+        <md-button class="md-raised md-primary cs-compact cs-add-button">{{'apply changes' | translate}}
+        </md-button>
+        <i class="material-icons btn-icon close-icon" ng-click="viewCloumnClose()">close</i>
+        <md-button class="md-raised md-primary cs-compact cs-add-button close-btn">{{'close' | translate}}
+        </md-button>
+      </div>
+    </div>
+  </div>
+  <md-table-container>
+    <table md-table multiple ng-model="selected" md-progress="promise">
+      <thead md-head md-order="reportSort">
+        <tr md-row>
+          <th md-column></th>
+          <th md-column md-order-by="{{item.key}}" ng-repeat="item in columns"
+            ng-show="preferences.reportViewColumns[item.key].visible">{{item.name}}
+          </th>
+          <th md-column class="cs-cell-action">{{'operation' | translate}}</th>
+        </tr>
+      </thead>
+      <tbody md-body ng-repeat="tr in trData track by $index">
+        <tr md-row class="first-tree">
+          <td md-cell><i class="material-icons table-arrow-down" ng-class="{'active':isActive[$index]}" ng-click="firstTreeClick($index)">keyboard_arrow_right</i></td>
+          <td md-cell>{{tr.name}}</td>
+          <td md-cell>{{tr.id}}</td>
+          <td md-cell>{{tr.impressions}}</td>
+          <td md-cell>{{tr.visits}}</td>
+          <td md-cell>{{tr.clicks}}</td>
+          <td md-cell>{{tr.conversions}}</td>
+          <td md-cell>{{tr.revenue}}</td>
+          <td md-cell>{{tr.cost}}</td>
+          <td md-cell>{{tr.profit}}</td>
+          <td md-cell>{{tr.cpv}}</td>
+          <td md-cell>{{tr.ictr}}</td>
+          <td md-cell>{{tr.operation}}</td>
+        </tr>
+        <tr md-row ng-show="treeFirstChildIsShow[$index]">
+          <td md-cell><i class="material-icons table-arrow-down" ng-class="{'down':isDown[$index]}" ng-click="secondTreeClick($index)">keyboard_arrow_right</i></td>
+          <td md-cell>Campaign1</td>
+          <td md-cell>1</td>
+          <td md-cell>2</td>
+          <td md-cell>3</td>
+          <td md-cell>4</td>
+          <td md-cell>5</td>
+          <td md-cell>6</td>
+          <td md-cell>7</td>
+          <td md-cell>8</td>
+          <td md-cell>9</td>
+          <td md-cell>10</td>
+          <td md-cell>10</td>
+        </tr>
+        <tr md-row ng-show="treeSecondChildIsShow[$index]">
+          <td md-cell></td>
+          <td md-cell>Campaign2</td>
+          <td md-cell>1</td>
+          <td md-cell>2</td>
+          <td md-cell>3</td>
+          <td md-cell>4</td>
+          <td md-cell>5</td>
+          <td md-cell>6</td>
+          <td md-cell>7</td>
+          <td md-cell>8</td>
+          <td md-cell>9</td>
+          <td md-cell>10</td>
+          <td md-cell>10</td>
+        </tr>
+      </tbody>
+      <!--   <tbody md-body>
+        <tr md-row ng-repeat="item in report.rows" ng-init="fab[$index] = {isOpen: false, tooltipVisible:false}">
+          <td md-cell ng-repeat="column in columns" ng-show="preferences.reportViewColumns[column.key].visible" ng-click="lineClick(reportGroupby1, columns[1].key, item[columns[1].key], 1)">{{item[column.key]}}</td>
+          <td md-cell class="cs-cell-action">
+            <md-fab-speed-dial md-direction="left" md-open="fab[$index].isOpen"
+            class="md-scale md-mini cs-fab-action"
+            ng-mouseenter="toggleFab($index, true)" ng-mouseleave="toggleFab($index, false)">
+            <md-fab-trigger>
+            <md-button aria-label="operation" class="md-primary md-icon-button md-mini">
+            <md-icon aria-label="menu">menu</md-icon>
+            </md-button>
+            </md-fab-trigger>
+            <md-fab-actions>
+            <md-button aria-label="Edit" class="md-fab md-raised md-mini"
+            ng-click="editItem($event, item)">
+            <md-icon aria-label="Edit">edit</md-icon>
+            </md-button>
+            <md-button aria-label="Delete" class="md-fab md-raised md-mini"
+            ng-click="deleteItem($event, item)">
+            <md-icon aria-label="Delete">delete</md-icon>
+            </md-button>
+            </md-fab-actions>
+            </md-fab-speed-dial>
+          </td>
+        </tr>
+      </tbody>
+      <tbody md-body ng-if="report.totalRows != 0">
+        <tr md-row>
+          <td md-cell ng-show="preferences.reportViewColumns[columns[0].key].visible">Total</td>
+          <td md-cell ng-repeat="column in columns" ng-show="preferences.reportViewColumns[column.key].visible && !$first">{{report.totals[column.key]}}</td>
+          <td md-cell></td>
+        </tr>
+      </tbody> -->
+    </table>
+  </md-table-container>
+  <md-table-pagination md-limit="query.limit" md-limit-options="[50, 100, 200, 500, 1000]" md-page="query.offset"
+  md-total="{{report.totalRows}}" md-on-paginate="getList" md-page-select></md-table-pagination>
 </div>
