--- a/Front/src/tpl/app.html
+++ b/Front/src/tpl/app.html
@@ -6,7 +6,12 @@
         <h1>{{app.name}}</h1>
 
         <div flex></div>
-
+        <div class="home">
+            <i class="material-icons" ng-click="toCampaign()">home</i>
+        </div>
+        <div class="setting">
+            <i class="material-icons" ng-click="toSetting()">settings</i>
+        </div>
         <ul class="nav navbar-nav navbar-right">
             <!-- dropdown for user -->
             <li class="dropdown" uib-dropdown>
@@ -28,7 +33,7 @@
 
 <!-- <md-sidenav md-is-locked-open="screenGtSmall" md-component-id="left"
             class="md-sidenav-left md-whiteframe-z2 cs-left-aside"> -->
-<md-sidenav class="md-sidenav-left md-whiteframe-z2 cs-left-aside">
+<md-sidenav class="md-sidenav-left md-whiteframe-z2 cs-left-aside" ng-show="nav">
     <nav ui-nav class="navi clearfix">
         <ul class="nav">
             <li ui-sref-active="active">
@@ -73,6 +78,19 @@
                     <span>{{'affiliateNetwork' | translate}}</span>
                 </a>
             </li>-->
+        </ul>
+    </nav>
+</md-sidenav>
+
+<md-sidenav class="md-sidenav-left md-whiteframe-z2 cs-left-aside" ng-show="settingNav">
+    <nav ui-nav class="navi clearfix">
+        <ul class="nav">
+            <li ui-sref-active="active">
+                <a ui-sref="app.dashboard" md-ink-ripple>
+                    <md-icon class="material-icons md-dark md-18 nav-icon">view_list</md-icon>
+                    <span>{{'profile' | translate}}</span>
+                </a>
+            </li>
         </ul>
     </nav>
 </md-sidenav>
