--- a/Front/src/tpl/lander-edit-dialog.html
+++ b/Front/src/tpl/lander-edit-dialog.html
@@ -11,13 +11,19 @@
             <div class="form-group">
                 <label class="col-sm-3 control-label">Name：</label>
                 <div class="col-sm-5">
-                    <input type="text" class="form-control" ng-model="item.name" required>
+                    <input type="text" name="name" class="form-control" ng-model="item.name" required>
+                    <span style="color:red" ng-show="editForm.name.$dirty && editForm.name.$invalid">
+                    <span ng-show="editForm.name.$error.required">Name is required.</span>
+                    </span>
                 </div>
             </div>
             <div class="form-group">
                 <label class="col-sm-3 control-label">Url：</label>
                 <div class="col-sm-5">
-                    <input type="text" class="form-control" ng-model="item.url" required>
+                    <input type="text" name="url" class="form-control" ng-model="item.url" required>
+                    <span style="color:red" ng-show="editForm.url.$dirty && editForm.url.$invalid">
+                    <span ng-show="editForm.url.$error.required">Url is required.</span>
+                    </span>
                 </div>
             </div>
             <div class="url-tokens-row form-group">
@@ -35,13 +41,16 @@
             <div class="form-group">
                 <label class="col-sm-3 control-label">Number of offers：</label>
                 <div class="col-sm-5">
-                    <input type="text" class="form-control" ng-model="item.numberOfOffers" required>
+                    <input type="text" name="numberOfOffers" class="form-control" ng-model="item.numberOfOffers" required>
+                    <span style="color:red" ng-show="editForm.numberOfOffers.$dirty && editForm.numberOfOffers.$invalid">
+                    <span ng-show="editForm.numberOfOffers.$error.required">NumberOfOffers is required.</span>
+                    </span>
                 </div>
             </div>
             <div class="form-group">
                 <label class="col-sm-3 control-label">Country: </label>
                 <div class="col-sm-5">
-                    <md-select class="cs-subform-select" ng-model="item.country" required>
+                    <md-select class="cs-subform-select" ng-model="item.country">
                         <md-option value="1">American</md-option>
                         <md-option value="2">Canada</md-option>
                         <md-option value="3">China</md-option>
