--- a/Front/src/tpl/report.html
+++ b/Front/src/tpl/report.html
@@ -45,21 +45,27 @@
                 </md-select>
             </div>
             <div class="cs-subform-group" ng-show="datetype==0">
-                <label class="cs-subform-label">{{'startDate' | translate}}：</label>
+                <label class="cs-subform-label">{{'fromDate' | translate}}：</label>
                 <div class="cs-subform-control">
-                    <button class="cs-button-datepicker" uib-datepicker-popup="yyyy-MM-dd" ng-model="query.from"
-                            ng-max="query.to" is-open="ctrl.dpOpened.a" datepicker-options="dateOptions"
+                    <button class="cs-button-datepicker" uib-datepicker-popup="yyyy-MM-dd" ng-model="fromDate"
+                            ng-max="toDate" is-open="ctrl.dpOpened.a" datepicker-options="dateOptions"
                             ng-required="true" close-text="Close" ng-click="ctrl.dpOpened.a=true" type="button">
-                        {{query.from | date: 'yyyy-MM-dd'}}<i class="glyphicon glyphicon-calendar"></i>
+                        {{fromDate | date: 'yyyy-MM-dd'}}<i class="glyphicon glyphicon-calendar"></i>
                     </button>
+                    <select class="cs-subform-select" ng-model="fromTime">
+                        <option value="00:00">00:00</option><option value="01:00">01:00</option><option value="02:00">02:00</option><option value="03:00">03:00</option><option value="04:00">04:00</option><option value="05:00">05:00</option><option value="06:00">06:00</option><option value="07:00">07:00</option><option value="08:00">08:00</option><option value="09:00">09:00</option><option value="10:00">10:00</option><option value="11:00">11:00</option><option value="12:00">12:00</option><option value="13:00">13:00</option><option value="14:00">14:00</option><option value="15:00">15:00</option><option value="16:00">16:00</option><option value="17:00">17:00</option><option value="18:00">18:00</option><option value="19:00">19:00</option><option value="20:00">20:00</option><option value="21:00">21:00</option><option value="22:00">22:00</option><option value="23:00">23:00</option>
+                    </select>
                 </div>
-                <label class="cs-subform-label">{{'endDate' | translate}}：</label>
+                <label class="cs-subform-label">{{'toDate' | translate}}：</label>
                 <div class="cs-subform-control">
-                    <button class="cs-button-datepicker" uib-datepicker-popup="yyyy-MM-dd" ng-model="query.to"
-                            ng-min="query.from" is-open="ctrl.dpOpened.b" datepicker-options="dateOptions"
+                    <button class="cs-button-datepicker" uib-datepicker-popup="yyyy-MM-dd" ng-model="toDate"
+                            ng-min="fromDate" is-open="ctrl.dpOpened.b" datepicker-options="dateOptions"
                             ng-required="true" close-text="Close" ng-click="ctrl.dpOpened.b=true" type="button">
-                        {{query.to | date: 'yyyy-MM-dd'}}<i class="glyphicon glyphicon-calendar"></i>
+                        {{toDate | date: 'yyyy-MM-dd'}}<i class="glyphicon glyphicon-calendar"></i>
                     </button>
+                    <select class="cs-subform-select" ng-model="toTime">
+                        <option value="00:00">00:00</option><option value="01:00">01:00</option><option value="02:00">02:00</option><option value="03:00">03:00</option><option value="04:00">04:00</option><option value="05:00">05:00</option><option value="06:00">06:00</option><option value="07:00">07:00</option><option value="08:00">08:00</option><option value="09:00">09:00</option><option value="10:00">10:00</option><option value="11:00">11:00</option><option value="12:00">12:00</option><option value="13:00">13:00</option><option value="14:00">14:00</option><option value="15:00">15:00</option><option value="16:00">16:00</option><option value="17:00">17:00</option><option value="18:00">18:00</option><option value="19:00">19:00</option><option value="20:00">20:00</option><option value="21:00">21:00</option><option value="22:00">22:00</option><option value="23:00">23:00</option>
+                    </select>
                 </div>
             </div>
             <div class="cs-subform-search">
