setting profile update

--- a/Front/src/tpl/app.html
+++ b/Front/src/tpl/app.html
@@ -7,7 +7,7 @@
 
         <div flex></div>
         <div class="home">
-            <i class="material-icons" ng-click="toCampaign()">home</i>
+            <i class="material-icons" ng-click="toReport()">home</i>
         </div>
         <div class="setting">
             <i class="material-icons" ng-click="toSetting()">settings</i>
@@ -33,7 +33,7 @@
 
 <!-- <md-sidenav md-is-locked-open="screenGtSmall" md-component-id="left"
             class="md-sidenav-left md-whiteframe-z2 cs-left-aside"> -->
-<md-sidenav class="md-sidenav-left md-whiteframe-z2 cs-left-aside" ng-show="nav">
+<md-sidenav class="md-sidenav-left md-whiteframe-z2 cs-left-aside">
     <nav ui-nav class="navi clearfix">
         <ul class="nav">
             <li ui-sref-active="active">
