--- a/Front/src/tpl/setApp.html
+++ b/Front/src/tpl/setApp.html
@@ -4,7 +4,7 @@
 
         <div flex></div>
         <div class="home">
-            <i class="material-icons" ng-click="toCampaign()">home</i>
+            <i class="material-icons" ng-click="toReport()">home</i>
         </div>
         <div class="setting">
             <i class="material-icons" ng-click="toSetting()">settings</i>
@@ -35,7 +35,7 @@
     <nav ui-nav class="navi clearfix">
         <ul class="nav">
             <li ui-sref-active="active">
-                <a ui-sref="app.dashboard" md-ink-ripple>
+                <a ui-sref="setApp.profile" md-ink-ripple>
                     <md-icon class="material-icons md-dark md-18 nav-icon">view_list</md-icon>
                     <span>{{'profile' | translate}}</span>
                 </a>
