setting htmls update

--- a/Front/src/tpl/setApp.html
+++ b/Front/src/tpl/setApp.html
@@ -40,6 +40,24 @@
                     <span>{{'profile' | translate}}</span>
                 </a>
             </li>
+            <li ui-sref-active="active">
+                <a ui-sref="setApp.referralProgram" md-ink-ripple>
+                    <md-icon class="material-icons md-dark md-18 nav-icon">view_list</md-icon>
+                    <span>{{'referralProgram' | translate}}</span>
+                </a>
+            </li>
+            <li ui-sref-active="active">
+                <a ui-sref="setApp.subscriptions" md-ink-ripple>
+                    <md-icon class="material-icons md-dark md-18 nav-icon">view_list</md-icon>
+                    <span>{{'subscriptions' | translate}}</span>
+                </a>
+            </li>
+            <li ui-sref-active="active">
+                <a ui-sref="setApp.domain" md-ink-ripple>
+                    <md-icon class="material-icons md-dark md-18 nav-icon">view_list</md-icon>
+                    <span>{{'domain' | translate}}</span>
+                </a>
+            </li>
         </ul>
     </nav>
 </md-sidenav>
