--- a/Front/src/index.html
+++ b/Front/src/index.html
@@ -74,6 +74,9 @@
 <script src="js/services/values.js"></script>
 <script src="js/controllers/signin.js"></script>
 <script src="js/controllers/profile.js"></script>
+<script src="js/controllers/referralProgram.js"></script>
+<script src="js/controllers/subscriptions.js"></script>
+<script src="js/controllers/domain.js"></script>
 <script src="js/controllers/signup.js"></script>
 <script src="js/controllers/report.js"></script>
 <script src="js/controllers/affiliateNetwork.js"></script>
