--- a/Front/src/tpl/campaign-edit-dialog.html
+++ b/Front/src/tpl/campaign-edit-dialog.html
@@ -35,7 +35,7 @@
                 <label class="col-sm-3 control-label">TrafficSource<span class="star-icon">*</span>: </label>
                 <div class="col-sm-5">
                     <md-select class="cs-subform-select" name="trafficSource" ng-model="item.trafficSource" required>
-                        <md-option value="{{ts}}" ng-repeat="ts in trafficSources" ng-selected="item.trafficSourceId==ts.id">{{ts.name}}</md-option>
+                        <md-option value="{{ts}}" ng-repeat="ts in trafficSources">{{ts.name}}</md-option>
                         <span style="color:red" ng-show="editForm.trafficSource.$dirty && editForm.trafficSource.$invalid">
                         <span ng-show="editForm.trafficSource.$error.required">TrafficSource is required.</span>
                         </span>
@@ -46,7 +46,7 @@
                 <label class="col-sm-3 control-label">Country<span class="star-icon">*</span>: </label>
                 <div class="col-sm-5">
                     <md-select class="cs-subform-select" name="country" ng-model="item.country" required>
-                        <md-option value="{{cou}}" ng-repeat="cou in countries" ng-selected="item.country==cou.alpha3Code">{{cou.name}}</md-option>
+                        <md-option value="{{cou.alpha3Code}}" ng-repeat="cou in countries">{{cou.name}}</md-option>
                     </md-select>
                     <span style="color:red" ng-show="editForm.country.$dirty && editForm.country.$invalid">
                     <span ng-show="editForm.country.$error.required">Country is required.</span>
