setting html update 0122

--- a/Front/src/index.html
+++ b/Front/src/index.html
@@ -74,8 +74,13 @@
 <script src="js/services/values.js"></script>
 <script src="js/controllers/signin.js"></script>
 <script src="js/controllers/profile.js"></script>
+<script src="js/controllers/setUp.js"></script>
 <script src="js/controllers/referralProgram.js"></script>
 <script src="js/controllers/subscriptions.js"></script>
+<script src="js/controllers/userManagement.js"></script>
+<script src="js/controllers/botBlacklist.js"></script>
+<script src="js/controllers/eventLog.js"></script>
+<script src="js/controllers/invoices.js"></script>
 <script src="js/controllers/domain.js"></script>
 <script src="js/controllers/signup.js"></script>
 <script src="js/controllers/report.js"></script>
