--- a/Front/src/tpl/setApp.html
+++ b/Front/src/tpl/setApp.html
@@ -58,6 +58,36 @@
                     <span>{{'domain' | translate}}</span>
                 </a>
             </li>
+            <li ui-sref-active="active">
+                <a ui-sref="setApp.setUp" md-ink-ripple>
+                    <md-icon class="material-icons md-dark md-18 nav-icon">view_list</md-icon>
+                    <span>{{'setUp' | translate}}</span>
+                </a>
+            </li>
+            <li ui-sref-active="active">
+                <a ui-sref="setApp.userManagement" md-ink-ripple>
+                    <md-icon class="material-icons md-dark md-18 nav-icon">view_list</md-icon>
+                    <span>{{'userManagement' | translate}}</span>
+                </a>
+            </li>
+            <li ui-sref-active="active">
+                <a ui-sref="setApp.botBlacklist" md-ink-ripple>
+                    <md-icon class="material-icons md-dark md-18 nav-icon">view_list</md-icon>
+                    <span>{{'botBlacklist' | translate}}</span>
+                </a>
+            </li>
+            <li ui-sref-active="active">
+                <a ui-sref="setApp.invoices" md-ink-ripple>
+                    <md-icon class="material-icons md-dark md-18 nav-icon">view_list</md-icon>
+                    <span>{{'invoices' | translate}}</span>
+                </a>
+            </li>
+            <li ui-sref-active="active">
+                <a ui-sref="setApp.eventLog" md-ink-ripple>
+                    <md-icon class="material-icons md-dark md-18 nav-icon">view_list</md-icon>
+                    <span>{{'eventLog' | translate}}</span>
+                </a>
+            </li>
         </ul>
     </nav>
 </md-sidenav>
