resource should be plural in rest api

--- a/Front/src/tpl/flow-edit.html
+++ b/Front/src/tpl/flow-edit.html
@@ -326,7 +326,7 @@
         </div>
 
         <div class="col-sm-12 col-md-6 offer-content">
-          <div class="cs-flow-offer-header clearfix">
+          <div class="cs-flow-lander-header clearfix">
             <div class="col-sm-9 col-md-9">Offer</div>
             <div class="col-sm-3 col-md-3">Weight</div>
           </div>
