fix tree view in report page

--- a/Front/src/tpl/app.html
+++ b/Front/src/tpl/app.html
@@ -7,10 +7,10 @@
 
         <div flex></div>
         <div class="home">
-            <i class="material-icons" ng-click="toReport()">home</i>
+          <a ui-sref="app.report.campaign"><i class="material-icons">home</i></a>
         </div>
         <div class="setting">
-            <i class="material-icons" ng-click="toSetting()">settings</i>
+          <a ui-sref="setApp.profile"><i class="material-icons">settings</i></a>
         </div>
         <ul class="nav navbar-nav navbar-right">
             <!-- dropdown for user -->
